<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgrond_color"
    android:padding="20dp">

    <!-- Bouton Menu en haut à gauche -->
    <ImageButton
        android:id="@+id/btn_retour"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button_back"
        android:src="@drawable/applications_24"
        android:contentDescription="@string/menu"
        android:elevation="4dp"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:backgroundTint="#B8C3C3"/>

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_gravity="center_horizontal" />


    <!-- Liste des habitants -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Carte Habitant - Exemples -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/card_background"
                android:padding="16dp"
                android:layout_marginTop="20dp"
                android:elevation="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/etage_1"
                    android:textStyle="bold"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jordan_mvotio"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/superficie_28_m"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_equipement"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="4dp"/>
            </LinearLayout>

            <!-- Deuxième Carte -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/card_background"
                android:padding="16dp"
                android:layout_marginTop="20dp"
                android:elevation="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/etage_2"
                    android:textStyle="bold"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sathush_sebamalai"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/superficie_32_m"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3_equipements"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="4dp"/>
            </LinearLayout>

            <!-- Troisième Carte -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/card_background"
                android:padding="16dp"
                android:layout_marginTop="20dp"
                android:elevation="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/etage_1"
                    android:textStyle="bold"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/victor_oskanian"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/superficie_24_m"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_equipements"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="4dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
