<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rectangle_background"
        android:padding="20dp"
        android:elevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modifier_le_profil"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#00757D"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp" />

        <!-- Prénom -->
        <EditText
            android:id="@+id/edit_prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pr_nom"
            android:background="@drawable/input_background"
            android:padding="12dp"
            android:textSize="16sp"
            android:layout_marginBottom="15dp" />

        <!-- Nom -->
        <EditText
            android:id="@+id/edit_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:background="@drawable/input_background"
            android:padding="12dp"
            android:textSize="16sp"
            android:layout_marginBottom="15dp" />

        <!-- Email -->
        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:background="@drawable/input_background"
            android:padding="12dp"
            android:textSize="16sp"
            android:layout_marginBottom="25dp"
            android:inputType="textEmailAddress" />

        <!-- Bouton Enregistrer -->
        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enregistrer"
            android:textColor="@color/buttonTextColor"
            android:textSize="16sp"
            android:background="@drawable/button_rounded"
            android:padding="12dp"
            app:backgroundTint="@color/buttonColor" />

    </LinearLayout>
</ScrollView>
