<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgrond_color">

    <!-- Bouton Menu en haut à gauche -->
    <ImageButton
        android:id="@+id/btn_retour"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button_back"
        android:src="@drawable/applications_24"
        android:contentDescription="@string/menu"
        android:elevation="4dp"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:backgroundTint="#B8C3C3"/>

    <!-- Espace en haut -->
    <View
        android:layout_width="match_parent"
        android:layout_height="100dp" />


    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/deconnexion_alt_24"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_marginBottom="0dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/deconnexion"
        android:textColor="#00757D"
        android:textSize="22sp"
        android:textStyle="bold" />
    <!-- Espace en haut -->
    <View
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <!-- Les deux boutons alignés horizontalement -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp">

        <!-- Bouton Annuler -->
        <Button
            android:id="@+id/btn_annuler"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/boutton_rounded"
            android:gravity="center"
            android:maxWidth="320dp"
            android:minWidth="250dp"
            android:text="@string/annuler"
            android:textColor="@color/buttonTextColor"
            android:textSize="16sp"
            app:backgroundTint="@color/buttonColor"
            tools:ignore="RtlHardcoded"
            android:layout_marginEnd="15dp"/>

        <!-- Bouton Déconnexion -->
        <Button
            android:id="@+id/btn_deconnecter"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/boutton_rounded"
            android:gravity="center"
            android:maxWidth="320dp"
            android:minWidth="250dp"
            android:text="@string/deconnecter"
            android:textColor="@color/buttonTextColor"
            android:textSize="16sp"
            app:backgroundTint="#A80000"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

</LinearLayout>
